tests/format/flow-repo/this_type/generics.js
class Generic<X> {
  clone(): Generic<X> { return this; }
}

class Implicit<X> { arg: X; val: X; }
class ImplicitNumber extends Implicit { arg: number; }

(new ImplicitNumber().val: string) // error: number ~> string
